--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "bundle/vim-jquery-doc"]
 	path = bundle/vim-jquery-doc
 	url = git://github.com/lucapette/vim-jquery-doc.git
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = git://github.com/kien/ctrlp.vim.git
