--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
 	url = git://github.com/kien/ctrlp.vim.git
+[submodule "bundle/vim-easytags"]
+	path = bundle/vim-easytags
+	url = git://github.com/xolox/vim-easytags.git
